--- a/style.css
+++ b/style.css
@@ -123,6 +123,7 @@ hr {
 
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 24px;
 }
 
 .course .course-banner img {
