--- a/style.css
+++ b/style.css
@@ -126,6 +126,9 @@ hr {
     grid-column-gap: 24px;
 }
 
+
+
+
 .course .course-banner img {
     width: 224px;
     height: 104px;
@@ -152,4 +155,59 @@ hr {
 
 #grey {
     color: #aeaeae;
+}
+
+
+/* media-quaries */
+/* mobile devices */
+@media screen and (max-width:688px) {
+
+
+    .container {
+
+        width: 100%;
+    }
+
+    .players {
+
+
+        grid-template-columns: repeat(1, 1fr);
+
+
+    }
+
+    .player,
+    .blog,
+    .courses {
+
+        flex-direction: column;
+    }
+
+    .blogs,
+    .courses {
+
+        grid-template-columns: repeat(1, 1fr);
+
+    }
+
+}
+
+/* tablet devices */
+
+@media screen and (min-width: 688px) and (max-width: 992px) {
+    .container {
+        width: 100%;
+    }
+
+    .players,
+    .courses {
+
+
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .blogs {
+
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
